add query anime movies by title
